--- a/app/src/main/res/layout/activity_sync_player.xml
+++ b/app/src/main/res/layout/activity_sync_player.xml
@@ -90,11 +90,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <VideoView
-            android:id="@+id/videoView"
+        <com.google.android.exoplayer2.ui.StyledPlayerView
+            android:id="@+id/playerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            app:use_controller="false" />
 
     </FrameLayout>
 
